--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,26 +7,26 @@ services:
     stdin_open: true
     user: root
     networks:
-      - mysqlnet
+      - inno_net
     depends_on:
       - mysql
     environment:
       MYSQL_HOST: mysql
       MYSQL_ROOT_PASSWORD: root
   
-  mysql:
-    image: mysql:latest
-    container_name: mysql
-    restart: unless-stopped
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: mytest
-      MYSQL_USER: testuser
-      MYSQL_PASSWORD: testpassword
-    networks:
-      - mysqlnet
+#   mysql:
+#     image: mysql:latest
+#     container_name: mysql
+#     restart: unless-stopped
+#     environment:
+#       MYSQL_ROOT_PASSWORD: root
+#       MYSQL_DATABASE: mytest
+#       MYSQL_USER: testuser
+#       MYSQL_PASSWORD: testpassword
+#     networks:
+#       - inno_net
 
 networks:
-  mysqlnet:
+  inno_net:
     driver: bridge
     
